--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,17 +3,32 @@
     <string name="bol">Jay Jawan Jai Kisaan</string>
     <string name="signin">SIGN IN</string>
     <string name="signup">SIGN UP</string>
-    <string name="logout">Logout</string>
-    <string name="about_us">About Us</string>
-    <string name="settings">Settings</string>
     <string name="signupNow">Don\'t Have an Account?  Sign Up</string>
     <string name="signinNow">Already Have an Account?  Sign in</string>
     <string name="name">Your Name</string>
     <string name="mobileNo">Mobile Number</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
+
     <string name="temp">10°C</string>
     <string name="city">Jalandhar</string>
+    <string name="date">Sunday, May 13, 2020</string>
+
+    <string name="updates">Agricultural News</string>
+    <string name="kisankalyan">Ministry of Agriculture and Farmer\' Welfare</string>
+    <string name="agromarket">Crops Market Price</string>
+
+    <!-- Menu -->
+    <string name="logout">Log Out</string>
+    <string name="settings">Settings</string>
+    <string name="about_us">About Us</string>
+
+    <string name="advisory">Advisory System</string>
+    <string name="production">Production System</string>
+
+    <string name="call_text">Phone Call with Experts</string>
+    <string name="vcall_text">Video call with Experts</string>
+    <string name="chat_text">Chat with Experts</string>
 
     <string-array name="country_arrays">
         <item>Choose Country</item>
